@@ -1,3 +1,8 @@
+2008-01-10  Akim Demaille  <demaille@gostai.com>
+
+	Include config.h when using it.
+	* utime.cc: here.
+
 2008-01-10  Samuel Tardieu  <tardieu@gostai.com>
 
 	Try to fix build on Windows.
